The t_secmem test_secmem() expects that the default secure memory buffer size is 16k but on ppc64 the actual size is 64k due to large page size and the test fails with "allocation did not fail as expected" error.
Description
Description
Details
Details
- Version
- libgcrypt-1.8.0
Revisions and Commits
Revisions and Commits
rC libgcrypt | |||
rCda127f7505ff Fix secmem test for machine with larger page. | |||
rC621f5c4e8373 Fix secmem test for machine with larger page. |
Related Objects
Related Objects
- Mentioned In
- T4294: Release Libgcrypt 1.9.0
E232: Weekly Standup